--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobile website maker software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best wysiwyg web page maker software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="MUohyDDbaVBM1xjYKxK2+QLZBUV1zNMlLn1O1nh/sy7vriTYYLxeeeJCjOzc9l+gnm7NDMwlvebT9zW33aiP9NJXWuUnHMPgzaKKRiZhGIqGuYC5c/6oMip36BHXKjXO" data-form-email="true">
+                    <input type="hidden" value="R6Ho+AtcYuSKJiuYpr28/JnA7IBCziIxs2s9iANbqGh0dOostKwulocTn/A9YV3QGVJuUKGRs++snyjTlxxAK/Px60pGLu+WFgSM30RYcty5rjHockw4cTOfI4jiFEsv" data-form-email="true">
 
                     
 
