--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best mobile web site design software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy offline website design</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -218,7 +218,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="t3mWeYQoalhrLks1He91JTdyAZhJHIxQDdl2E2ypbBiFDYO6tUW0gJLSVoegmqDU/HFm24AgSzoETmkz7M4LIdyWD9IZVQDyareuMuRQbNLw3hC1ONVlxskCHRheJpD7" data-form-email="true">
+                        <input type="hidden" value="pMGHEQWg7YpyPoHCAqHJos8xfxZhtxlpN9fGJdKS3HtugCTe94LJ2E5pmDeng6ex9BznhNn3AsHDGYVUvb9xxhuW52IgRgMN/qPaHnXlsp8uvwCe/yTFoGWQs5EKZk9K" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-65-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -274,7 +274,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="XSegqPFE0+ZSDi/kTJuKVgnsNRqrdw15pZMyP6NOBIbOErjHXSSTfsvJRWlA8Q2vquWYuM+qQXFPm8mO+OHvMC0zSVZx7PyUkKx71RTNMJbD6Bjr0w0NISIDVEbSw/8E" data-form-email="true">
+                    <input type="hidden" value="GIj9tYmYV/1UiFpBFmFwjH7wfgD2vV0PR5stTSYOYJJKYdbQRcDf/YMcHoT4FEW876Fg9pnsmiA/uHTO/GQwS54BY/G/lVnFuehoAlpRuKugzG1dL3eoIgnh+86hrZsO" data-form-email="true">
 
                     
 
